<resources>
    <string name="app_name">트레이절단계산기</string>
    <string name="home_subtitle">1번 접기와 2번 접기 계산을 각각 따로 사용할 수 있습니다.</string>
    <string name="home_one_fold">1번 접기</string>
    <string name="home_two_fold">2번 접기</string>
    <string name="back_button">뒤로가기</string>

    <string name="one_fold_title">1번 접기</string>
    <string name="angle_picker_instruction">트레이 폭을 먼저 선택한 뒤 오른쪽 선분을 위아래로 드래그하거나 각도 숫자를 눌러 직접 입력하세요.</string>
    <string name="tray_width_hint">트레이 폭</string>
    <string name="tray_width_helper">드롭다운에서 값을 선택합니다. 단위는 mm입니다.</string>
    <string name="tray_width_required_message">트레이를 선택해주세요</string>
    <string name="angle_value_default">0도</string>
    <string name="angle_value_format">%1$d도</string>
    <string name="angle_canvas_format">현재 각도 %1$d도</string>
    <string name="angle_range_hint">-90도 ~ 90도</string>
    <string name="angle_picker_description">각도를 손가락으로 조절하는 영역</string>
    <string name="result_label">계산 결과</string>
    <string name="result_value_default">중심선으로 부터 좌, 우 0mm씩 절단하세요</string>
    <string name="result_sentence_format">중심선으로 부터 좌, 우 %1$dmm씩 절단하세요</string>
    <string name="angle_input_title">각도 직접 입력</string>
    <string name="angle_input_message">-90도부터 90도 사이의 각도를 입력하세요.</string>
    <string name="angle_input_hint">예: -30 또는 45</string>
    <string name="angle_input_confirm">확인</string>
    <string name="angle_input_cancel">취소</string>

    <string name="two_fold_title">2번 접기</string>
    <string name="two_fold_subtitle">공통 접는 각도와 트레이 간격을 입력해 2번 접기 절단값을 계산합니다.</string>
    <string name="two_fold_guide_title">작업 안내도</string>
    <string name="two_fold_guide_dialog_description">확대된 작업 안내도 이미지</string>
    <string name="two_fold_guide_caption">아랫변 기준 중심점 간 거리와 각 절단점을 한눈에 확인할 수 있도록 정리한 예시입니다.</string>
    <string name="two_fold_tray_size_hint">트레이 사이즈</string>
    <string name="two_fold_tray_size_helper">절단 계산에 사용할 트레이 사이즈를 선택합니다.</string>
    <string name="two_fold_parallel_angle_hint">공통 접는 각도</string>
    <string name="two_fold_gap_hint">트레이 간격</string>
    <string name="two_fold_gap_error">트레이 간격이 너무 작아 중심점 거리를 계산할 수 없습니다.</string>
    <string name="two_fold_final_angle_label">최종 각도</string>
    <string name="two_fold_final_angle_default">0도</string>
    <string name="two_fold_final_angle_format">%1$d도</string>
    <string name="two_fold_cut_label_1">절단점 1</string>
    <string name="two_fold_cut_label_2">절단점 2</string>
    <string name="two_fold_cut_default_1">절단점 1 결과가 여기에 표시됩니다.</string>
    <string name="two_fold_cut_default_2">절단점 2 결과가 여기에 표시됩니다.</string>
    <string name="two_fold_cut_sentence_1">절단점 1은 윗면 중심점에서 좌우로 %1$dmm 잘라내야 합니다.</string>
    <string name="two_fold_cut_sentence_2">절단점 2는 아랫면 중심점에서 좌우로 %1$dmm 잘라내야 합니다.</string>
    <string name="two_fold_center_distance_label">중심점 간 거리</string>
    <string name="two_fold_center_distance_default">평행 180도 모드에서 계산됩니다.</string>
    <string name="two_fold_center_distance_format">아랫변 기준 중심점 간의 거리는 %1$dmm입니다.</string>
    <string name="two_fold_horizontal_reduction_label">절곡 후 줄어진 길이</string>
    <string name="two_fold_horizontal_reduction_default">중심점 거리 계산 후 표시됩니다.</string>
    <string name="two_fold_horizontal_reduction_format">절곡으로 인한 수평 감소량은 약 %1$dmm입니다.</string>
    <string name="two_fold_connector_warning_default">중심점 거리 계산 후 연결대 설치 가능 여부가 표시됩니다.</string>
    <string name="two_fold_connector_warning_invalid">연결대 설치 여부를 계산할 수 없습니다.</string>
    <string name="two_fold_connector_warning_overlap">절단부가 중첩되어 연결대를 설치할 수 없습니다.</string>
    <string name="two_fold_connector_warning_shortage">연결대 설치 길이가 최소 %1$dmm 부족합니다.</string>
    <string name="two_fold_connector_warning_clearance">연결대 설치는 가능하지만 작업 여유가 %1$dmm에 불과합니다.</string>
    <string name="two_fold_connector_warning_ok">연결대 설치가 가능합니다. 작업 여유는 약 %1$dmm입니다.</string>

    <string name="guide_cut_result_1">계산 결과값(1)</string>
    <string name="guide_cut_result_2">계산 결과값(2)</string>
    <string name="guide_center_distance">중심점 간의 거리</string>
    <string name="guide_center_point_1">중심점1</string>
    <string name="guide_center_point_2">중심점2</string>
    <string name="guide_tray_size">트레이 사이즈</string>
    <string name="guide_tray_gap">트레이 간격</string>
    <string name="guide_angle_label_1">접는 각도 1</string>
    <string name="guide_angle_label_2">접는 각도 2</string>

    <string-array name="tray_width_options">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>450</item>
        <item>500</item>
        <item>600</item>
        <item>750</item>
    </string-array>
</resources>
